--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ gymnasium>=0.29.0
 numpy>=1.24.0
 matplotlib>=3.7.0
 scipy>=1.10.0
+pygame>=2.5.0
 
 # Optional: For RL training with Ray RLlib
 # ray[rllib]>=2.7.0
